--- a/views/profesionalexperience.handlebars
+++ b/views/profesionalexperience.handlebars
@@ -6,43 +6,50 @@
       <div class="duplicate-job border border-success p-3 m-4" style="display: none">
         <div class="form-row">
           <div class="form-group col-md-1 col-xl-1">
-            <label for="YearStart">Started</label>
-            <input type="number" min="1950" max="2019" placeholder="2017" id="YearStart" class="form-control">
+            <label for="entryDate">Started</label>
+            <input type="number" min="1950" max="2019" placeholder="2017" id="entryDate" name="entryDate" class="form-control">
           </div>
           <div class="form-group col-md-1 col-xl-1">
-            <label for="YearEnd">Ended</label>
-            <input type="number" min="1950" max="2019" placeholder="2019" id="YearEnd" class="form-control">
+            <label for="leaveDate">Ended</label>
+            <input type="number" min="1950" max="2019" placeholder="2019" id="leaveDate" name="leaveDate" class="form-control">
           </div>
           <div class="form-group col-md-1 col-xl-10">
             <label for="company" class="col-xl-12">Company</label>
-            <input type="text" id="company" class="autocomplete form-control col-xl-12 company" autocomplete="off">
+            <input type="text" id="company" name="company" class="autocomplete form-control col-xl-12 company" autocomplete="off">
             <div class="companySug" id="sug"></div>
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-6 col-xl-3">
-            <label for="inputCity">City</label>
-            <input type="text" class="form-control" id="inputCity" placeholder="Monterrey">
+            <label for="city">City</label>
+            <input type="text" class="form-control" id="city" name="city" placeholder="Monterrey">
           </div>
           <div class="form-group col-md-4 col-xl-3">
-            <label for="inputState">State</label>
-            <input type="text" class="form-control" id="inputState" placeholder="Nuevo León">
+            <label for="state">State</label>
+            <input type="text" class="form-control" id="state" name="city" placeholder="Nuevo León">
           </div>
           <div class="form-group col-md-4 col-xl-6">
-            <label for="companyRole" class="col-xl-12">Role or Position</label>
-            <input type="text" placeholder="Sales representative" class="form-control col-xl-12" id="companyRole">
+            <label for="jobTitle" class="col-xl-12">Job Title</label>
+            <input type="text" placeholder="Sales representative" class="form-control col-xl-12" id="jobTitle" name="jobTitle">
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6 col-xl-12">
+             <label class="col-xl-12" for="description">Job Description</label>
+             <textarea class="form-control col-xl-12" rows="3" id="description" name="description"></textarea>
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-6 col-xl-12 tasks">
             <label class="col-xl-12" for="task">Tasks Performed</label>
-            <input type="text" class="form-control col-xl-10" id="task"
+            <input type="text" class="form-control col-xl-10" name="task1" id="task1"
               placeholder="Implemented marketing plan that increased sales by 30% and created loyalty among new and existing customers.">
           </div>
           <button type="submit" class="col-xl-1 btn btn-primary addTask">add</button>
         </div>
+
       </div>
       <div id="Job_1" class="border border-success p-3 m-4">
         <div class="form-row">
@@ -71,9 +78,16 @@
             <input type="text" class="form-control" id="inputState_1">
           </div>
           <div class="form-group col-md-4 col-xl-6">
-            <label for="companyRole_1" class="col-xl-12">Role or Position</label>
-            <input type="text" placeholder="Sales representative" class="form-control col-xl-12" id="companyRole_1">
+            <label for="jobTitle_1" class="col-xl-12">Role or Position</label>
+            <input type="text" placeholder="Sales representative" class="form-control col-xl-12" id="jobTitle_1">
             <div class="companySug" id="sug"></div>
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-6 col-xl-12">
+             <label class="col-xl-12" for="jobDescription_1">Job Description</label>
+             <textarea class="form-control col-xl-12" rows="3" id="jobDescription_1"></textarea>
           </div>
         </div>
 
@@ -96,32 +110,32 @@
       <div class="duplicate-education border border-success p-3 m-4" style="display: none">
         <div class="form-row">
           <div class="form-group col-md-1 col-xl-1">
-            <label for="YearStartSchool">Started</label>
-            <input type="number" min="1950" max="2019" placeholder="2017" id="YearStartSchool" class="form-control">
+            <label for="entryDateSchool">Started</label>
+            <input type="number" min="1950" max="2019" placeholder="2017" id="entryDateSchool" name="entryDateSchool" class="form-control">
           </div>
           <div class="form-group col-md-1 col-xl-1">
-            <label for="YearEndSchool">Ended</label>
-            <input type="number" min="1950" max="2019" placeholder="2019" id="YearEndSchool" class="form-control">
+            <label for="leaveDateSchool">Ended</label>
+            <input type="number" min="1950" max="2019" placeholder="2019" id="leaveDateSchool" name="leaveDateSchool" class="form-control">
           </div>
           <div class="form-group col-md-1 col-xl-10">
             <label for="school" class="col-xl-12">School</label>
-            <input type="text" id="school" class="autocomplete form-control col-xl-12 company" autocomplete="off">
+            <input type="text" id="school" name="school" class="autocomplete form-control col-xl-12" autocomplete="off" placeholder="Tecnológico de Monterrey">
             <div class="school" id="sugSchool"></div>
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-6 col-xl-3">
-            <label for="inputCitySchool">City</label>
-            <input type="text" class="form-control" id="inputCitySchool" placeholder="Monterrey">
+            <label for="citySchool">City</label>
+            <input type="text" class="form-control" id="citySchool" name="citySchool" placeholder="Monterrey">
           </div>
           <div class="form-group col-md-4 col-xl-3">
-            <label for="inputStateSchool">State</label>
-            <input type="text" class="form-control" id="inputStateSchool" placeholder="Nuevo León">
+            <label for="stateSchool">State</label>
+            <input type="text" class="form-control" id="stateSchool" name="stateSchool" placeholder="Nuevo León">
           </div>
           <div class="form-group col-md-4 col-xl-6">
-            <label for="Program" class="col-xl-12">Program</label>
-            <input type="text" placeholder="Sales representative" class="form-control col-xl-12" id="Program">
+            <label for="degree" class="col-xl-12">Program or Degree</label>
+            <input type="text" placeholder="Bachelor of Arts" class="form-control col-xl-12" id="degree" name="degree">
           </div>
         </div>
 
@@ -130,12 +144,12 @@
       <div id="School_1" class="border border-success p-3 m-4">
         <div class="form-row">
           <div class="form-group col-md-1 col-xl-1">
-            <label for="YearStartSchool_1">Started</label>
-            <input type="number" min="1950" max="2019" placeholder="2017" id="YearStartSchool_1" class="form-control">
+            <label for="entryDateSchool_1">Started</label>
+            <input type="number" min="1950" max="2019" placeholder="2017" id="entryDateSchool_1" class="form-control">
           </div>
           <div class="form-group col-md-1 col-xl-1">
-            <label for="YearEndSchool_1">Ended</label>
-            <input type="number" min="1950" max="2019" placeholder="2019" id="YearEndSchool_1" class="form-control">
+            <label for="leaveDateSchool_1">Ended</label>
+            <input type="number" min="1950" max="2019" placeholder="2019" id="leaveDateSchool_1" class="form-control">
           </div>
           <div class="form-group col-md-1 col-xl-10">
             <label for="school_1" class="col-xl-12">School</label>
@@ -169,17 +183,17 @@
       <div class="duplicate-skill border border-success p-3 m-4" style="display: none">
         <div class="form-row">
           <div class="col-md-4 col-xl-6 form-group">
-            <label for="skill" class="col-xl-12">Skills</label>
-            <input type="text" placeholder="Javascript" id="skill" class="col-xl-12">
+            <label for="skillName" class="col-xl-12">Skills</label>
+            <input type="text" placeholder="Javascript" id="skillName" name="skillName" class="col-xl-12">
           </div>
           <div class="col-md-4 col-xl-6 form-group">
-            <label for="level-skill" class="col-xl-12">Mastery of Skill</label>
-            <select name="" id="level-skill" class="form-control" class="col-xl-12">
+            <label for="skillLevel" class="col-xl-12">Mastery of Skill</label>
+            <select name="skillLevel" id="skillLevel" class="form-control" class="col-xl-12">
               <option value="0">Please select</option>
-              <option value="1">Beginner</option>
-              <option value="2">Intermediate</option>
-              <option value="3">Advanced</option>
-              <option value="4">Expert</option>
+              <option value="Beginner">Beginner</option>
+              <option value="Intermediate">Intermediate</option>
+              <option value="Advanced">Advanced</option>
+              <option value="Expert">Expert</option>
             </select>
           </div>
         </div>
@@ -363,8 +377,9 @@
       jobClone.find("#YearEnd").attr("id", "YearEnd_" + num);
       jobClone.find("#company").attr("id", "company_" + num);
       jobClone.find("#inputCity").attr("id", "InputCity_" + num);
+      jobClone.find("#jobDescription").attr("id", "jobDescription_"+num)
       jobClone.find("#inputState").attr("id", "inputState_" + num);
-      jobClone.find("#companyRole").attr("id", "companyRole_" + num);
+      jobClone.find("#jobTitle").attr("id", "jobTitle_" + num);
       jobClone.find("#task").attr("id", "task_" + num);
 
       jobClone.removeClass('duplicate-job');
@@ -378,7 +393,7 @@
       var educationClone = $(".duplicate-education").clone(true).prop('id', 'School_' + num);
       educationClone.insertBefore("#addEducation");
       educationClone.show();
-      educationClone.find("#YearStartSchool").attr("id", "YearStartSchool_" + num);
+      educationClone.find("#entryDateSchool").attr("id", "entryDateSchool_" + num);
       educationClone.removeClass("duplicate-education");
 
     });
