--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -95,47 +95,62 @@
                     <div class="card-body">
                         <form action="/experience" method="POST">
                             <div class="form-row">
-                                <div class="form-group col-md-8">
-                                    <label for="jobTitle">Job Title</label>
-                                    <input type="text" class="form-control" name="jobTitle" id="jobTitle"
-                                        placeholder="Job Title">
+                                <div class="form-group col-md-1 col-xl-1">
+                                    <label for="entryDate">Started</label>
+                                    <input type="number" min="1950" max="2019" placeholder="2017" id="entryDate"
+                                        name="entryDate" class="form-control">
                                 </div>
-                                <div class="form-group col-md-4">
-                                    <label for="company">Company</label>
-                                    <input type="text" class="form-control" name="company" id="company"
-                                        placeholder="Company">
+                                <div class="form-group col-md-1 col-xl-1">
+                                    <label for="leaveDate">Ended</label>
+                                    <input type="number" min="1950" max="2019" placeholder="2019" id="leaveDate"
+                                        name="leaveDate" class="form-control">
+                                </div>
+                                <div class="form-group col-md-1 col-xl-10">
+                                    <label for="company" class="col-xl-12">Company</label>
+                                    <input type="text" id="company" name="company"
+                                        class="autocomplete form-control col-xl-12 company" autocomplete="off">
+                                    <div class="companySug" id="sug"></div>
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="form-group col-md-6 col-xl-3">
+                                    <label for="city">City</label>
+                                    <input type="text" class="form-control" id="city" name="city"
+                                        placeholder="Monterrey">
+                                </div>
+                                <div class="form-group col-md-4 col-xl-3">
+                                    <label for="state">State</label>
+                                    <input type="text" class="form-control" id="state" name="state"
+                                        placeholder="Nuevo León">
+                                </div>
+                                <div class="form-group col-md-4 col-xl-6">
+                                    <label for="jobTitle" class="col-xl-12">Job Title</label>
+                                    <input type="text" placeholder="Sales representative" class="form-control col-xl-12"
+                                        id="jobTitle" name="jobTitle">
                                 </div>
                             </div>
                             <div class="form-row">
-                                <div class="form-group col-md-4">
-                                    <label for="entryDate">Entry Date</label>
-                                    <input type="date" data-provide="datepicker" class="form-control" name="entryDate"
-                                        id="entryDate" placeholder="">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <label for="leaveDate">Leave Date</label>
-                                    <input type="date" data-provide="datepicker" class="form-control" name="leaveDate"
-                                        id="leaveDate" placeholder="">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <label for="Place">Place</label>
-                                    <input type="text" class="form-control" name="place" id="place" placeholder="Place">
+                                <div class="form-group col-md-6 col-xl-12">
+                                    <label class="col-xl-12" for="description">Job Description</label>
+                                    <textarea class="form-control col-xl-12" rows="3" id="description"
+                                        name="description"></textarea>
                                 </div>
                             </div>
+
                             <div class="form-row">
-                                <div class="form-group col-md-12">
-                                    <label for="description">Description</label>
-                                    <input type="text" class="form-control" name="description" id="description"
-                                        placeholder="Description">
+                                <div class="form-group col-md-6 col-xl-12 tasks">
+                                    <label class="col-xl-12" for="task">Tasks Performed</label>
+                                    <input style="display:none" type="text" class="clone-task form-control col-xl-10"
+                                        name="task" id="task"
+                                        placeholder="Implemented marketing plan that increased sales by 30% and created loyalty among new and existing customers.">
+                                    <input type="text" class="form-control col-xl-10" name="task1" id="task1"
+                                        placeholder="Implemented marketing plan that increased sales by 30% and created loyalty among new and existing customers.">
+                                    <!--<button type="submit" id="addTask" class="col-xl-1 btn btn-primary m-4">add</button>-->
                                 </div>
                             </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-12">
-                                    <label for="tasks">Tasks</label>
-                                    <input type="text" class="form-control" name="tasks" id="tasks"
-                                        placeholder="Tasks performed on the job">
-                                </div>
-                            </div>
+
+
                             <button id="submit" type="submit" class="btn btn-primary">Submit</button>
                         </form>
                     </div>
@@ -148,9 +163,10 @@
                         <h6><strong>Company: </strong>{{company}}</h6>
                         <h6><strong>Entry Date: </strong>{{entryDate}}</h6>
                         <h6><strong>Leave Date: </strong>{{leaveDate}}</h6>
-                        <h6><strong>Place: </strong>{{place}}</h6>
+                        <h6><strong>City: </strong>{{city}}</h6>
+                        <h6><strong>State: </strong>{{state}}</h6>
                         <h6><strong>Description: </strong>{{description}}</h6>
-                        <h6><strong>Tasks: </strong>{{tasks}}</h6>
+                        <h6><strong>Tasks: </strong>{{task1}}</h6>
                         <form action="/deleteexp/{{id}}" method="POST">
                             <button type="submit" class="btn btn-danger">Delete</button>
                         </form>
@@ -161,8 +177,6 @@
             </div>
         </div>
     </div>
-
-
 
     <div class="row my-4">
         <div class="col-12 col-md-12 col-lg-12">
@@ -180,15 +194,20 @@
                     <div class="card-body">
                         <form action="/skills" method="POST">
                             <div class="form-row">
-                                <div class="form-group col-md-8">
-                                    <label for="name">Skill Name</label>
-                                    <input type="text" class="form-control" name="skillName" id="skillName"
-                                        placeholder="Name of the Skill">
+                                <div class="col-md-4 col-xl-6 form-group">
+                                    <label for="skillName" class="col-xl-12">Skills</label>
+                                    <input type="text" placeholder="Javascript" id="skillName" name="skillName"
+                                        class="col-xl-12">
                                 </div>
-                                <div class="form-group col-md-4">
-                                    <label for="phone">Level</label>
-                                    <input type="number" class="form-control" name="level" id="level " min="1" max="5"
-                                        placeholder="1 = Apprentice to 5 = Master">
+                                <div class="col-md-4 col-xl-6 form-group">
+                                    <label for="skillLevel" class="col-xl-12">Mastery of Skill</label>
+                                    <select name="skillLevel" id="skillLevel" class="form-control" class="col-xl-12">
+                                        <option value="0">Please select</option>
+                                        <option value="Beginner">Beginner</option>
+                                        <option value="Intermediate">Intermediate</option>
+                                        <option value="Advanced">Advanced</option>
+                                        <option value="Expert">Expert</option>
+                                    </select>
                                 </div>
                             </div>
                             <button id="submit" type="submit" class="btn btn-primary">Submit</button>
@@ -200,7 +219,7 @@
                     {{#each data.Skills}}
                     <div id="stats">
                         <h6><strong>Skill Name: </strong>{{skillName}}</h6>
-                        <h6><strong>Level: </strong>{{level}}</h6>
+                        <h6><strong>Level: </strong>{{skillLevel}}</h6>
                         <form action="/deleteskills/{{id}}" method="POST">
                             <button type="submit" class="btn btn-danger">Delete</button>
                         </form>
@@ -211,6 +230,62 @@
             </div>
         </div>
     </div>
+
+    <div class="row my-4">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card">
+                <div class="card-header">
+                    <h4>
+                        <strong>Languages</strong>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse"
+                            data-target="#collapseFormLanguages" aria-expanded="false"
+                            aria-controls="collapseFormLanguages">
+                            Add New
+                        </button>
+                    </h4>
+                </div>
+                <div class="collapse" id="collapseFormLanguages">
+                    <div class="card-body">
+                        <form action="/languages" method="POST">
+                            <div class="form-row">
+                                <div class="col-md-4 col-xl-6 form-group">
+                                    <label for="language" class="col-xl-12">Skills</label>
+                                    <input type="text" placeholder="Javascript" id="language" name="language"
+                                        class="col-xl-12">
+                                </div>
+                                <div class="col-md-4 col-xl-6 form-group">
+                                    <label for="languageLevel" class="col-xl-12">Mastery language</label>
+                                    <select name="languageLevel" id="languageLevel" class="form-control"
+                                        class="col-xl-12">
+                                        <option value="0">Please select</option>
+                                        <option value="Beginner">Beginner</option>
+                                        <option value="Intermediate">Intermediate</option>
+                                        <option value="Advanced">Advanced</option>
+                                        <option value="Expert">Expert</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <hr>
+                    {{#each data.Languages}}
+                    <div id="stats">
+                        <h6><strong>Language: </strong>{{language}}</h6>
+                        <h6><strong>Level: </strong>{{languageLevel}}</h6>
+                        <form action="/deletelanguages/{{id}}" method="POST">
+                            <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+                    </div>
+                    <hr>
+                    {{/each}}
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <div class="row my-4">
         <div class="col-12 col-md-12 col-lg-12">
@@ -228,37 +303,45 @@
                 <div class="collapse" id="collapseFormStudies">
                     <div class="card-body">
                         <form action="/studies" method="POST">
+
                             <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label for="title">Title</label>
-                                    <input type="text" class="form-control" name="title" id="title"
-                                        placeholder="Degree">
+                                <div class="form-group col-md-1 col-xl-1">
+                                    <label for="entryDateSchool">Started</label>
+                                    <input type="number" min="1950" max="2019" placeholder="2017" id="entryDateSchool"
+                                        name="entryDateSchool" class="form-control">
                                 </div>
-                                <div class="form-group col-md-6">
-                                    <label for="place">Grade</label>
-                                    <input type="text" class="form-control" name="grade" id="grade "
-                                        placeholder="no se porquye es iguial">
+                                <div class="form-group col-md-1 col-xl-1">
+                                    <label for="leaveDateSchool">Ended</label>
+                                    <input type="number" min="1950" max="2019" placeholder="2019" id="leaveDateSchool"
+                                        name="leaveDateSchool" class="form-control">
+                                </div>
+                                <div class="form-group col-md-1 col-xl-10">
+                                    <label for="school" class="col-xl-12">School</label>
+                                    <input type="text" id="school" name="school"
+                                        class="autocomplete form-control col-xl-12" autocomplete="off"
+                                        placeholder="Tecnológico de Monterrey">
+                                    <div class="school" id="sugSchool"></div>
                                 </div>
                             </div>
+
                             <div class="form-row">
-                                <div class="form-group col-md-12">
-                                    <label for="title">School</label>
-                                    <input type="text" class="form-control" name="place" id="place"
-                                        placeholder="School">
+                                <div class="form-group col-md-6 col-xl-3">
+                                    <label for="citySchool">City</label>
+                                    <input type="text" class="form-control" id="citySchool" name="citySchool"
+                                        placeholder="Monterrey">
+                                </div>
+                                <div class="form-group col-md-4 col-xl-3">
+                                    <label for="stateSchool">State</label>
+                                    <input type="text" class="form-control" id="stateSchool" name="stateSchool"
+                                        placeholder="Nuevo León">
+                                </div>
+                                <div class="form-group col-md-4 col-xl-6">
+                                    <label for="degree" class="col-xl-12">Program or Degree</label>
+                                    <input type="text" placeholder="Bachelor of Arts" class="form-control col-xl-12"
+                                        id="degree" name="degree">
                                 </div>
                             </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-4">
-                                    <label for="entryDate">Entry Date</label>
-                                    <input type="date" data-provide="datepicker" class="form-control" name="entryDate"
-                                        id="entryDate" placeholder="">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <label for="leaveDate">Leave Date</label>
-                                    <input type="date" data-provide="datepicker" class="form-control" name="leaveDate"
-                                        id="leaveDate" placeholder="">
-                                </div>
-                            </div>
+
                             <button id="submit" type="submit" class="btn btn-primary">Submit</button>
                         </form>
                     </div>
@@ -267,11 +350,12 @@
                     <hr>
                     {{#each data.Studies}}
                     <div id="stats">
-                        <h6><strong>Title: </strong>{{title}}</h6>
-                        <h6><strong>Grade: </strong>{{grade}}</h6>
-                        <h6><strong>Place: </strong>{{place}}</h6>
-                        <h6><strong>Entry Date: </strong>{{entryDate}}</h6>
-                        <h6><strong>Finish Date: </strong>{{leaveDate}}</h6>
+                        <h6><strong>Degree: </strong>{{degree}}</h6>
+                        <h6><strong>School: </strong>{{school}}</h6>
+                        <h6><strong>City: </strong>{{citySchool}}</h6>
+                        <h6><strong>State: </strong>{{stateSchool}}</h6>
+                        <h6><strong>Entry Date: </strong>{{entryDateSchool}}</h6>
+                        <h6><strong>Finish Date: </strong>{{leaveDateSchool}}</h6>
                         <form action="/deletestudies/{{id}}" method="POST">
                             <button type="submit" class="btn btn-danger">Delete</button>
                         </form>
