modified files for mobile version + logo

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="col-lg-6">
+    <div class="col-lg-6 my-5 mx-auto">
         <h1>{{title}}</h1>
         <br>
         <p>If you are already registered. Please enter your credentials.</p>
