--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,5 +1,6 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom shadow-sm">
-    <h3 class="my-0 mr-md-auto font-weight-normal">LebensLauf</h3>
+    {{!-- <h3 class="my-0 mr-md-auto font-weight-normal">LebensLauf</h3> --}}
+    <img src="./images/logo-header.png" class="my-0 mr-md-auto" alt="">
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="/">Home</a>
         {{#if isAuthenticated}}
