--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -33,3 +33,19 @@ footer{
   padding-top:150px;
   padding-bottom:150px;
 }
+
+.container {
+  flex: 1 0 auto;
+}
+.footer {
+  color:#f5f5f5;
+  flex-shrink: 0;
+}
+
+html, body {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+}
