--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -127,7 +127,7 @@
 
                 <!-- Grid column -->
                 <div class="col-lg-5 text-center text-lg-left">
-                    <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/screens-section.jpg"
+                    <img class="img-fluid rounded" src="./images/resume.jpg"
                         alt="Sample image">
                 </div>
                 <!-- Grid column -->
