--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,7 +1,7 @@
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
+<footer class="pt-4 my-md-5 pt-md-5 footer">
     <div class="container">
         <div class="row">
-            <div class="col-6 col-md">
+            <div class="col-sm-12 col-md-4 col-lg-4 text-center">
                 <h5>Features</h5>
                 <ul class="list-unstyled text-small">
                     <li><a class="text-muted" href="#">Cool stuff</a></li>
@@ -9,14 +9,14 @@
                     <li><a class="text-muted" href="#">Stuff for developers</a></li>
                 </ul>
             </div>
-            <div class="col-6 col-md">
+            <div class="col-sm-12 col-md-4 col-lg-4 text-center">
                 <h5>Resources</h5>
                 <ul class="list-unstyled text-small">
                     <li><a class="text-muted" href="#">Resource</a></li>
                     <li><a class="text-muted" href="#">Resource name</a></li>
                 </ul>
             </div>
-            <div class="col-6 col-md">
+            <div class="col-sm-12 col-md-4 col-lg-4 text-center">
                 <h5>About</h5>
                 <ul class="list-unstyled text-small">
                     <li><a class="text-muted" href="#">Team</a></li>
