--- a/views/profesionalexperience.handlebars
+++ b/views/profesionalexperience.handlebars
@@ -65,6 +65,7 @@
             <label for="company_1" class="col-xl-12">Company</label>
             <input type="text" id="company_1" class="autocomplete form-control col-xl-12 companyt" autocomplete="off">
             <div class="companySug" id="companySug"></div>
+            <ul class="typeahead dropdown-menu"></ul>
           </div>
         </div>
 
