--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <div class="text-center">
-            <img src="{{data.GeneralInfos.0.profilePic}}"
+            <img id="profile-pic" src="{{data.GeneralInfos.0.profilePic}}"
                 style="object-fit: cover; width:200px; height:200px; border-radius: 50%; border-width: 3px; border-style: solid; border-color: green;"
                 alt="...">
         </div>
-        <h1 class="display-4">{{data.username}}</h1>
+        <h1 class="display-4 uppercase">{{data.username}}</h1>
         <p class="lead">My details.</p>
     </div>
     <div class="row my-4">
@@ -27,31 +27,31 @@
                             <div class="form-row">
                                 <div class="form-group col-md-8">
                                     <label for="name">Name</label>
-                                    <input type="text" class="form-control" name="name" id="name" placeholder="Name">
+                                    <input type="text" class="form-control" name="name" id="name" placeholder="Name" required>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label for="description">Description</label>
                                     <input type="text" class="form-control" name="description" id="description"
-                                        placeholder="Description">
+                                        placeholder="Description" required>
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="form-group col-md-6">
                                     <label for="address">Address</label>
                                     <input type="text" class="form-control" name="address" id="address"
-                                        placeholder="Address">
+                                        placeholder="Address" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="phone">Phone</label>
                                     <input type="text" class="form-control" name="phone" id="phone"
-                                        placeholder="Phone Number">
+                                        placeholder="Phone Number" required>
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="form-group col-md-12">
                                     <label for="address">Profile Pic URL</label>
                                     <input type="text" class="form-control" name="profilePic" id="profilePic"
-                                        placeholder="profilePic">
+                                        placeholder="profilePic" required>
                                 </div>
                             </div>
                             <button id="submit" type="submit" class="btn btn-primary">Submit</button>
@@ -96,17 +96,17 @@
                                 <div class="form-group col-md-1 col-xl-1">
                                     <label for="entryDate">Started</label>
                                     <input type="number" min="1950" max="2019" placeholder="2017" id="entryDate"
-                                        name="entryDate" class="form-control">
+                                        name="entryDate" class="form-control" required>
                                 </div>
                                 <div class="form-group col-md-1 col-xl-1">
                                     <label for="leaveDate">Ended</label>
                                     <input type="number" min="1950" max="2019" placeholder="2019" id="leaveDate"
-                                        name="leaveDate" class="form-control">
+                                        name="leaveDate" class="form-control" required>
                                 </div>
                                 <div class="form-group col-md-1 col-xl-10">
                                     <label for="company" class="col-xl-12">Company</label>
                                     <input type="text" id="company" name="company"
-                                        class="autocomplete form-control col-xl-12 company" autocomplete="off">
+                                        class="autocomplete form-control col-xl-12 company" autocomplete="off" required>
                                     <div class="companySug" id="sug"></div>
                                 </div>
                             </div>
@@ -115,24 +115,24 @@
                                 <div class="form-group col-md-6 col-xl-3">
                                     <label for="city">City</label>
                                     <input type="text" class="form-control" id="city" name="city"
-                                        placeholder="Monterrey">
+                                        placeholder="Monterrey" required>
                                 </div>
                                 <div class="form-group col-md-4 col-xl-3">
                                     <label for="state">State</label>
                                     <input type="text" class="form-control" id="state" name="state"
-                                        placeholder="Nuevo León">
+                                        placeholder="Nuevo León" required>
                                 </div>
                                 <div class="form-group col-md-4 col-xl-6">
                                     <label for="jobTitle" class="col-xl-12">Job Title</label>
                                     <input type="text" placeholder="Sales representative" class="form-control col-xl-12"
-                                        id="jobTitle" name="jobTitle">
+                                        id="jobTitle" name="jobTitle" required>
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="form-group col-md-6 col-xl-12">
                                     <label class="col-xl-12" for="description">Job Description</label>
                                     <textarea class="form-control col-xl-12" rows="3" id="description"
-                                        name="description"></textarea>
+                                        name="description" required></textarea>
                                 </div>
                             </div>
 
@@ -141,9 +141,9 @@
                                     <label class="col-xl-12" for="task">Tasks Performed</label>
                                     <input style="display:none" type="text" class="clone-task form-control col-xl-10"
                                         name="task" id="task"
-                                        placeholder="Implemented marketing plan that increased sales by 30% and created loyalty among new and existing customers.">
+                                        placeholder="Implemented marketing plan that increased sales by 30% and created loyalty among new and existing customers." required>
                                     <input type="text" class="form-control col-xl-10" name="task1" id="task1"
-                                        placeholder="Implemented marketing plan that increased sales by 30% and created loyalty among new and existing customers.">
+                                        placeholder="Implemented marketing plan that increased sales by 30% and created loyalty among new and existing customers." required>
                                     <!--<button type="submit" id="addTask" class="col-xl-1 btn btn-primary m-4">add</button>-->
                                 </div>
                             </div>
@@ -195,12 +195,11 @@
                                 <div class="col-md-4 col-xl-6 form-group">
                                     <label for="skillName" class="col-xl-12">Skills</label>
                                     <input type="text" placeholder="Javascript" id="skillName" name="skillName"
-                                        class="col-xl-12">
+                                        class="form-control col-xl-12" required>
                                 </div>
                                 <div class="col-md-4 col-xl-6 form-group">
                                     <label for="skillLevel" class="col-xl-12">Mastery of Skill</label>
-                                    <select name="skillLevel" id="skillLevel" class="form-control" class="col-xl-12">
-                                        <option value="0">Please select</option>
+                                    <select name="skillLevel" id="skillLevel" class="form-control" class="col-xl-12" required>
                                         <option value="Beginner">Beginner</option>
                                         <option value="Intermediate">Intermediate</option>
                                         <option value="Advanced">Advanced</option>
@@ -248,14 +247,13 @@
                             <div class="form-row">
                                 <div class="col-md-4 col-xl-6 form-group">
                                     <label for="language" class="col-xl-12">Skills</label>
-                                    <input type="text" placeholder="Javascript" id="language" name="language"
-                                        class="col-xl-12">
+                                    <input type="text" placeholder="English" id="language" name="language"
+                                        class="form-control col-xl-12" required>
                                 </div>
                                 <div class="col-md-4 col-xl-6 form-group">
                                     <label for="languageLevel" class="col-xl-12">Mastery language</label>
                                     <select name="languageLevel" id="languageLevel" class="form-control"
-                                        class="col-xl-12">
-                                        <option value="0">Please select</option>
+                                        class="col-xl-12" form-control>
                                         <option value="Beginner">Beginner</option>
                                         <option value="Intermediate">Intermediate</option>
                                         <option value="Advanced">Advanced</option>
@@ -366,3 +364,6 @@
     </div>
 
 </div>
+<script>
+
+</script>
