--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,6 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.2/css/mdb.min.css" rel="stylesheet">
   <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet"
     type="text/css" />
-
 </head>
 
 
@@ -41,19 +40,23 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.2/js/mdb.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
-  <script src="../../public/js/bootstrap.min.js"></script>
+  {{!-- <script src="../../public/js/bootstrap.min.js"></script> --}}
   <script src="../../public/js/jquery.mockjax.js"></script>
   <script src="../../public/js/bootstrap-typeahead.js"></script>
 
   <script>
 
     $(document).ready(function () {
-      //$('.datepicker').datepicker();
+      $('.datepicker').datepicker({
+        format: "yyyy",
+        viewMode: "years",
+        minViewMode: "years"
+      });
 
 
 
       var image = $("#profile-pic");
-       if (image[0].height > 19) {
+      if (image[0].height > 19) {
         console.log("si hay foto");
         image.show();
       }
@@ -63,7 +66,7 @@
       }
 
       $("#company_1").typeahead({
-        source: [
+        local: [
           { id: 1, name: 'Toronto' },
           { id: 2, name: 'Montreal' },
           { id: 3, name: 'New York' },
